--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-# Welcome to ir.systems
+<H1> You have been re-directed to ir-systems.github.io </H1>
+<H2> This is the webpage for www.ir.systems </H2>
