--- a/index.html
+++ b/index.html
@@ -2,4 +2,4 @@
 <H1> You have been re-directed to ir-systems.github.io </H1>
 <H2> So the SSL message you are seeing is because this is the certification for www.github.com </H2>  
 <H2> This is the webpage for www.ir.systems </H2>
-<HTML>
+</HTML>
