--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <HTML>
-<H1> You have been re-directed to ir-systems.github.io </H1>
-<H2> So the website certificate is www.github.com </H2>  
-<H2> This is the webpage for www.ir.systems </H2>
+  <H1> Welcome to ir.systems</H1>
+
 </HTML>
