--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <HTML>
-  <font size="3" color="red">
-  <Title> ir.systems</Title>
-  </font>
+ <h1 style="color:red;">ir.systems</h1>
+ <h2 style="color:red;">Information Security and Cyber Defense Management Research, Advisory and Training</h2>
 
 </HTML>
