--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <HTML>
+ <h6 style="color:black;">Information Security and Cyber Defense Management Research, Advisory and Training</h6>
  <h1 style="color:red;">ir.systems</h1>
- <h4 style="color:red;">Information Security and Cyber Defense Management Research, Advisory and Training</h4>
+
 
 </HTML>
