--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <HTML>
- <h6 style="color:black;">Information Security and Cyber Defense Management Research, Advisory and Training</h6>
- <h1 style="color:red;">ir.systems</h1>
+ <h6 style="color:black; style="font-size:100%;">Information Security and Cyber Defense Management Research, Advisory and Training</h6>
+ <h1 style="color:red; style="font-size:600%;">ir.systems</h1>
 
 
 </HTML>
