--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <HTML>
- <h6 style="color:black; style=font-size:100%;>Information Security and Cyber Defense Management Research, Advisory and Training</h6>
+ <h6 style="color:black;>Information Security and Cyber Defense Management Research, Advisory and Training</h6>
  <h1 style="color:red; style=font-size:800%;>ir.systems</h1>
 
 
