--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <HTML>
- <h6 style="color:black;>Information Security and Cyber Defense Management Research, Advisory and Training</h6>
- <h1 style="color:red; style=font-size:800%;>ir.systems</h1>
+ <h6 style="color:black;">Information Security and Cyber Defense Management Research, Advisory and Training</h6>
+ <h1 style="color:red;" style="font-size:800%;">ir.systems</h1>
 
 
 </HTML>
