--- a/index.html
+++ b/index.html
@@ -1,6 +1,33 @@
-<HTML>
- <h6 style="color:black;">Information Security and Cyber Defense Management Research, Advisory and Training</h6>
- <h1 style="color:red;" style="font-size:800%;">ir.systems</h1>
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+div.a {
+  line-height: normal;
+}
 
+div.b {
+  line-height: 1.6;
+}
 
+div.c {
+  line-height: 80%;
+}
+
+div.d {
+  line-height: 200%;
+}
+</style>
+</head>
+ 
+<body>
+ <div class="a">
+  <h6 style="color:black;">Information Security and Cyber Defense Management Research, Advisory and Training</h6>
+ </div>
+ 
+ <div class="d">
+ <h1 style="color:red;">ir.systems</h1>
+ <div>
+  
+</body>
 </HTML>
