--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@ div.d {
 </head>
  
 <body>
- <div class="a">
-  <h6 style="color:black;">Information Security and Cyber Defense Management Research, Advisory and Training</h6>
- </div>
  
  <div class="d">
  <h1 style="color:red;">ir.systems</h1>
  <div>
-  
+ <div class="b">
+  <h6 style="color:black;">Information Security and Cyber Defense Management Research, Advisory and Training</h6>
+ </div>
+   
 </body>
 </HTML>
