--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ div.d {
  
  <div class="d">
  <h1 style="color:red;">ir.systems</h1>
- <div>
+ </div>
  <div class="b">
   <h6 style="color:black;">Information Security and Cyber Defense Management Research, Advisory and Training</h6>
  </div>
