--- a/index.html
+++ b/index.html
@@ -22,11 +22,9 @@ div.d {
  
 <body>
  
- <div class="d">
+ <div class="c">
  <h1 style="color:red;">ir.systems</h1>
- </div>
- <div class="b">
-  <h6 style="color:black;">Information Security and Cyber Defense Management Research, Advisory and Training</h6>
+ <h6 style="color:black;">Information Security and Cyber Defense Management Research, Advisory and Training</h6>
  </div>
    
 </body>
