--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@ div.d {
 </head>
  
 <body>
- 
+ background-color: #92a8d1;
  <div class="c">
- <h1 style="color:red;">ir.systems</h1>
- <h4 style="color:black;">Information Security and Cyber Defense Management Research, Advisory and Training </h4>
+ <h1 style="color:white;">ir.systems</h1>
+ <h5 style="color:white;">Information Security and Cyber Defense Management Research, Advisory and Training </h5>
  </div>
    
 </body>
