--- a/index.html
+++ b/index.html
@@ -17,11 +17,15 @@ div.c {
 div.d {
   line-height: 800%;
 }
+  
+body {
+  background-color: #92a8d1;
+}
 </style>
 </head>
  
 <body>
- background-color: #92a8d1;
+ 
  <div class="c">
  <h1 style="color:white;">ir.systems</h1>
  <h5 style="color:white;">Information Security and Cyber Defense Management Research, Advisory and Training </h5>
