--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@ body {
  <div class="c">
  <h1 style="color:white;">ir.systems</h1>
  <h5 style="color:white;">Information Security and Cyber Defense Management Research, Advisory and Training </h5>
+ 
+ <center>
+ <h1 style="color:white;">ir.systems</h1>
+ <h5 style="color:white;">Information Security and Cyber Defense Management Research, Advisory and Training </h5>
+ </center>
+   
  <h5 style="color:white;">Contact:  enquiry@ir.systems</h5>
   </div>
  
