--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@ body {
  <h1 style="color:white;">ir.systems</h1>
  <h5 style="color:white;">Information Security and Cyber Defense Management Research, Advisory and Training </h5>
  </center>
+ 
+   
+ <right>
+ <h1 style="color:white;">ir.systems</h1>
+ <h5 style="color:white;">Information Security and Cyber Defense Management Research, Advisory and Training </h5>
+ </right>
    
  <h5 style="color:white;">Contact:  enquiry@ir.systems</h5>
   </div>
