--- a/index.html
+++ b/index.html
@@ -27,22 +27,26 @@ body {
 <body>
  
  <div class="c">
- <h1 style="color:white;">ir.systems</h1>
- <h5 style="color:white;">Information Security and Cyber Defense Management Research, Advisory and Training </h5>
  
- <center>
+ <P ALIGN=LEFT>
  <h1 style="color:white;">ir.systems</h1>
  <h5 style="color:white;">Information Security and Cyber Defense Management Research, Advisory and Training </h5>
- </center>
+   </P>
+   
+ <P ALIGN=CENTER>
+ <h1 style="color:white;">ir.systems</h1>
+ <h5 style="color:white;">Information Security and Cyber Defense Management Research, Advisory and Training </h5>
+ </P>
  
    
- <right>
+ <P ALIGN=RIGHT>
  <h1 style="color:white;">ir.systems</h1>
  <h5 style="color:white;">Information Security and Cyber Defense Management Research, Advisory and Training </h5>
- </right>
-   
+ </P>
+ 
+ <br>
  <h5 style="color:white;">Contact:  enquiry@ir.systems</h5>
-  </div>
+ </div>
  
   
 </body>
