--- a/index.html
+++ b/index.html
@@ -26,28 +26,28 @@ body {
  
 <body>
  
+   
  <div class="c">
- 
- <P ALIGN=LEFT>
  <h1 style="color:white;">ir.systems</h1>
  <h5 style="color:white;">Information Security and Cyber Defense Management Research, Advisory and Training </h5>
-   </P>
+</div>
    
- <P ALIGN=CENTER>
+ <div class="c" style="text-align:center">
  <h1 style="color:white;">ir.systems</h1>
  <h5 style="color:white;">Information Security and Cyber Defense Management Research, Advisory and Training </h5>
- </P>
+ </div>
  
    
- <P ALIGN=RIGHT>
+<div class="c" style="text-align:right">
  <h1 style="color:white;">ir.systems</h1>
  <h5 style="color:white;">Information Security and Cyber Defense Management Research, Advisory and Training </h5>
- </P>
+   </div>
  
+ <div class="c">
  <br>
  <h5 style="color:white;">Contact:  enquiry@ir.systems</h5>
  </div>
  
-  
+ 
 </body>
 </HTML>
