--- a/index.html
+++ b/index.html
@@ -29,21 +29,25 @@ body {
    
  <div class="c">
  <h1 style="color:white;">ir.systems</h1>
- <h5 style="color:white;">Information Security and Cyber Defense Management Research, Advisory and Training </h5>
+ <h5 style="color:white;">Information Security and <BR>
+   Cyber Defense Management Research, Advisory and Training </h5>
 </div>
    
  <div class="c" style="text-align:center">
  <h1 style="color:white;">ir.systems</h1>
- <h5 style="color:white;">Information Security and Cyber Defense Management Research, Advisory and Training </h5>
+ <h5 style="color:white;">Information Security and <BR>
+   Cyber Defense Management Research, Advisory and Training </h5>
  </div>
  
    
 <div class="c" style="text-align:right">
  <h1 style="color:white;">ir.systems</h1>
- <h5 style="color:white;">Information Security and Cyber Defense Management Research, Advisory and Training </h5>
+ <h5 style="color:white;">Information Security and <BR>
+   Cyber Defense Management Research, Advisory and Training </h5>
    </div>
  
- <div class="c">
+ <div class="c" style="text-align:center">
+ <br>
  <br>
  <h5 style="color:white;">Contact:  enquiry@ir.systems</h5>
  </div>
