--- a/index.html
+++ b/index.html
@@ -30,20 +30,23 @@ body {
  <div class="c">
  <h1 style="color:white;">ir.systems</h1>
  <h5 style="color:white;">Information Security and <BR>
-   Cyber Defense Management Research, Advisory and Training </h5>
+   Cyber Defense Management <BR>
+   Research, Advisory and Training </h5>
 </div>
    
  <div class="c" style="text-align:center">
  <h1 style="color:white;">ir.systems</h1>
  <h5 style="color:white;">Information Security and <BR>
-   Cyber Defense Management Research, Advisory and Training </h5>
+   Cyber Defense Management <BR>
+   Research, Advisory and Training </h5>
  </div>
  
    
 <div class="c" style="text-align:right">
  <h1 style="color:white;">ir.systems</h1>
  <h5 style="color:white;">Information Security and <BR>
-   Cyber Defense Management Research, Advisory and Training </h5>
+   Cyber Defense Management <BR>
+   Research, Advisory and Training </h5>
    </div>
  
  <div class="c" style="text-align:center">
