--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@ body {
  
    
  <div class="c">
- <h1 style="color:white;">ir.systems</h1>
- <h5 style="color:white;">Information Security and <BR>
-   Cyber Defense Management <BR>
-   Research, Advisory and Training </h5>
+ <h1 style="color:white;"></h1>
+ <h5 style="color:white;"><BR>
+   <BR>
+   </h5>
 </div>
  <BR>
  <div class="c" style="text-align:center">
@@ -42,10 +42,10 @@ body {
  </div>
  <BR>  
 <div class="c" style="text-align:right">
- <h1 style="color:white;">ir.systems</h1>
- <h5 style="color:white;">Information Security and <BR>
-   Cyber Defense Management <BR>
-   Research, Advisory and Training </h5>
+ <h1 style="color:white;"></h1>
+ <h5 style="color:white;"><BR>
+   <BR>
+   </h5>
    </div>
  
  <div class="c" style="text-align:center">
