--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+  
 <style>
 div.a {
   line-height: normal;
@@ -41,6 +43,7 @@ body {
 
  <div class="c" style="text-align:center">
  <br>
+ <i class="fa fa-envelope-o"></i>
  <h5 style="color:white;">Contact:  enquiry@ir.systems</h5>
  </div>
  
