--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@ body {
 
  <div class="c" style="text-align:center">
  <br>
- <i class="fa fa-envelope-o"></i>
- <h5 style="color:white;">Contact:  enquiry@ir.systems</h5>
+ <i class="fa fa-envelope-o">
+   <h5 style="color:white;">Contact:  enquiry@ir.systems</h5>
+   </i>
  </div>
  
  
