--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@ body {
 
  <div class="c" style="text-align:center">
  <br>
- <i class="fa fa-envelope-o">
-   <h5 style="color:white;">Contact:  enquiry@ir.systems</h5>
-   </i>
+   <h5 style="color:white;"><i class="fa fa-envelope-o"></i>Contact:  enquiry@ir.systems</h5>
  </div>
  
  
