--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ body {
 
  <div class="c" style="text-align:center">
  <br>
-   <h5 style="color:white;"><i class="fa fa-envelope-o"></i>Contact:  enquiry@ir.systems</h5>
+   <h5 style="color:white;"><i class="fa fa-envelope-o"></i>&nbsp&nbspContact:  enquiry@ir.systems</h5>
  </div>
  
  
