--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@ body {
    
  <div class="c" style="text-align:center">
  <h1 style="color:white;">ir.systems</h1>
- <h5 style="color:white;">Information Security and <BR>
+ <h5 style="color:white;">Information Security Management <BR>
+   * <BR>
    Cyber Defense Management <BR>
+   * <BR>
    Research, Advisory and Training </h5>
  </div>
  <BR>  
