--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@ body {
    
  <div class="c" style="text-align:center">
  <h1 style="color:white;">ir.systems</h1>
-   * <BR>
- <h5 style="color:white;">Information Security Management <BR>
+   
+ <h5 style="color:white;">*<BR>
+   Information Security Management <BR>
    * <BR>
    Cyber Defense Management <BR>
    * <BR>
