--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ body {
  <div class="c" style="text-align:center">
  <br>
    <h4 style="color:white;"><i class="fa fa-envelope-o"></i>&nbsp&nbspContact:  enquiry@ir.systems</h4>
+   <h4 stype="color:white;"><i class="fa fa-globe"></i>&nbsp&nbspSingapore</h4>
  </div>
  
  
