--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@ body {
  <BR>
  <div class="c" style="text-align:center">
  <br>
-   <h4 style="color:white;"><i class="fa fa-envelope-o"></i>&nbsp&nbspContact:  enquiry@ir.systems<br>
-   <i class="fa fa-globe"></i>&nbsp&nbspSingapore</h4>
+   <h4 style="color:white;"><i class="fa fa-envelope-o"></i>&nbsp&nbspContact:  enquiry@ir.systems</h4>
  </div>
  
  
