--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ body {
  <div class="c" style="text-align:center">
  <br>
    <h4 style="color:white;"><i class="fa fa-envelope-o"></i>&nbsp&nbspContact:&nbsp&nbspenquiry@ir.systems</br>
-   <i class="fa fa-globe"></i>&nbsp&nbspCountry:&nbsp&nbspSingapore&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h4>
+   <i class="fa fa-globe"></i>&nbsp&nbspCountry:&nbsp&nbspSingapore&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h4>
  </div>
  
  
