--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ body {
  <BR>
  <div class="c" style="text-align:center">
  <br>
-   <h4 style="color:white;"><i class="fa fa-envelope-o"></i>&nbsp&nbspContact:&nbsp&nbspenquiry@ir.systems</br>
+   <h4 style="color:white;"><i class="fa fa-envelope-o"></i>&nbsp&nbspContact:&nbsp&nbspEnquiry@ir.systems</br>
    <i class="fa fa-globe"></i>&nbsp&nbspCountry:&nbsp&nbspSingapore&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h4>
  </div>
  
