--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ body {
  <BR>
    
  <div class="c" style="text-align:center">
- <h1 style="color:white;">ir.systems</h1>
+ <h1 style="color:white;" font-size: 150%>ir.systems</h1>
    
  <h5 style="color:white;">*<BR>
    Information Security Management <BR>
