--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@ body {
    <h4 style="color:white;"><i class="fa fa-envelope-o"></i>&nbsp&nbspContact:&nbsp&nbspenquiry@ir.systems</br>
    <i class="fa fa-globe"></i>&nbsp&nbspMain Office:&nbsp&nbspSingapore&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h4>
  </div>
- 
+ <BR>
+   <div class="twitter">
+            <a class="twitter-timeline" data-height="400" href="https://twitter.com/liuhackse?ref_src=twsrc%5Etfw">Tweets by liuhackse</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </div>
  
 </body>
 </HTML>
