--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ body {
  </div>
  <BR>
    <div class="twitter">
-            <a class="twitter-timeline" data-height="400" href="https://twitter.com/liuhackse?ref_src=twsrc%5Etfw">Tweets by liuhackse</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            <a class="twitter-timeline" data-height="100" href="https://twitter.com/astarhq?lang=en">Tweets by A*star</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
  
 </body>
