--- a/index.html
+++ b/index.html
@@ -51,7 +51,13 @@ body {
  <BR>
    <div class="twitter">
             <a class="twitter-timeline" data-width="50" data-height="100" href="https://twitter.com/astarhq?lang=en">Tweets by A*star</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        </div>
- 
+   </div>
+   <div class="twitter">
+            <a class="twitter-timeline" data-width="50" data-height="100" href="https://twitter.com/astarhq?lang=en">Tweets by A*star</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+   </div>
+   <div class="twitter">
+            <a class="twitter-timeline" data-width="50" data-height="100" href="https://twitter.com/astarhq?lang=en">Tweets by A*star</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+   </div>
+
 </body>
 </HTML>
