--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@ body {
  <h1 style="color:white; font-size:300%">ir.systems</h1>
    
  <h5 style="color:white;">*<BR>
-   Information Security Management <BR>
+   Information Security Management&bnsp&nbsp<i class="fa fa-external-link"></i> <BR>
    * <BR>
-   Cyber Defense Management <BR>
+   Cyber Defense Management&bnsp&nbsp<i class="fa fa-external-link"></i><BR>
    * <BR>
-   Research, Advisory and Training </h5>
+   Research, Advisory and Training&bnsp&nbsp<i class="fa fa-external-link"></i></h5>
  </div>
  <BR>  
  <BR>
