--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ div.d {
 body {
   background-color: rgb(201, 76, 76);
   margin: 60px auto;
-  width: 80%;
+  width: 70%;
 }
 </style>
 </head>
@@ -47,8 +47,8 @@ body {
  <BR>
  <div class="c" style="text-align:center">
  <br>
-   <h4 style="color:white;"><i class="fa fa-envelope-o"></i>&nbsp&nbspContact:&nbsp&nbspenquiry@ir.systems</br>
-   <i class="fa fa-globe"></i>&nbsp&nbspMain Office:&nbsp&nbspSingapore&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h4>
+   <h4 style="color:white;"><i class="fa fa-envelope-o"></i>&nbspContact:&nbspenquiry@ir.systems</br>
+   <i class="fa fa-globe"></i>&nbspMain Office:&nbspSingapore&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h4>
  </div>
  <BR>
 
