--- a/index.html
+++ b/index.html
@@ -20,7 +20,16 @@ div.c {
 div.d {
   line-height: 800%;
 }
-  
+
+.circle_green { 
+                width:1%;
+                padding:10px 11px;
+                margin:0 auto;
+                border:2px solid #a1a1a1;
+                border-radius:25px;
+                background-color:green;
+}
+
 body {
   background-color: rgb(201, 76, 76);
   margin: 60px auto;
@@ -50,6 +59,7 @@ body {
  <br>
    <h4 style="color:white;"><i class="fa fa-envelope-o"></i>&nbsp&nbsp&nbspContact:&nbspenquiry@ir.systems</br>
    <i class="fa fa-globe"></i>&nbsp&nbsp&nbspMain Office:&nbspSingapore&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h4>
+<div class="circle_green"></div>
  </div>
  <BR>
 
