--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@ div.d {
                 padding:10px 11px;
                 margin:0 auto;
                 border:2px solid #a1a1a1;
-                border-radius:25px;
-                background-color:green;
+                border-radius:10px;
+                background-color:white;
 }
 
 body {
