--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@ div.d {
   line-height: 800%;
 }
 
-.circle_green { 
-   width:1%;
-   margin:0 auto;
-   border:1px solid #a1a1a1;
-   background-color:white;
+div.circle{
+     width: 100px;
+     height: 100px;
+     border-radius: 50%;
+     background-color: blue
 }
 
 body {
@@ -52,7 +52,7 @@ body {
    Research, Advisory and Training&nbsp&nbsp<i class="fa fa-external-link"></i></h5>
  </div>
  <BR>
-<div class="circle_green"></div>
+<div class="div.circle"></div>
  <BR>
  <div class="c" style="text-align:center">
  <br>
