--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ div.circle{
      width: 100px;
      height: 100px;
      border-radius: 50%;
-     background-color: blue
+     background-color: white
 }
 
 body {
