--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ body {
  <BR>
  <div class="c" style="text-align:center">
  <br>
-   <h4 style="color:white;"><i class="fa fa-envelope-o"></i>&nbsp&nbsp&nbspContact:&nbspenquiry@ir.systems</br>
+   <h4 style="color:white;"><i class="fa fa-envelope-o"></i>&nbsp&nbsp&nbspContact:&nbspthowchang@gmail.com</br>
    <i class="fa fa-globe"></i>&nbsp&nbsp&nbspMain Office:&nbspSingapore&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h4>
  </div>
  <BR>
