--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@ body {
  <h1 style="color:white; font-size:300%">ir.systems</h1>
    
  <h5 style="color:white;">*<BR>
-   Information Security Management&nbsp&nbsp<i class="fa fa-external-link"></i> <BR>
+   Information Security&nbsp&nbsp<i class="fa fa-external-link"></i> <BR>
    * <BR>
-   Cyber Defense Management&nbsp&nbsp<i class="fa fa-external-link"></i><BR>
+   Cyber Defense&nbsp&nbsp<i class="fa fa-external-link"></i><BR>
    * <BR>
    Research, Advisory and Training&nbsp&nbsp<i class="fa fa-external-link"></i></h5>
  </div>
