--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@ body {
  <BR>
    
  <div class="c" style="text-align:center">
- <h1 style="color:white; font-size:300%">ir.systems</h1>
+ <h1 style="color:white; font-size:300%">irsys</h1>
    
  <h5 style="color:white;">*<BR>
-   Specialise in DarkOps&nbsp&nbsp<i class="fa fa-external-link"></i> <BR>
+   &nbsp&nbsp<i class="fa fa-external-link"></i> <BR>
    * <BR>
-   Cyber Defense&nbsp&nbsp<i class="fa fa-external-link"></i><BR>
+   &nbsp&nbsp<i class="fa fa-external-link"></i><BR>
    * <BR>
    Research and Advisory&nbsp&nbsp<i class="fa fa-external-link"></i></h5>
  </div>
