--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@ body {
  <h1 style="color:white; font-size:300%">irsys</h1>
    
  <h5 style="color:white;">*<BR>
-   &nbsp&nbsp<i class="fa fa-external-link"></i> <BR>
+   Post Quantum Cryptography&nbsp&nbsp<i class="fa fa-external-link"></i> <BR>
    * <BR>
-   &nbsp&nbsp<i class="fa fa-external-link"></i><BR>
+   Cyber Resiliency&nbsp&nbsp<i class="fa fa-external-link"></i><BR>
    * <BR>
-   Research and Advisory&nbsp&nbsp<i class="fa fa-external-link"></i></h5>
+   Advisory and Training&nbsp&nbsp<i class="fa fa-external-link"></i></h5>
  </div>
  <BR>  
  <BR>
