--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ body {
  <h1 style="color:white; font-size:300%">irsys</h1>
    
  <h5 style="color:white;">*<BR>
-   Post Quantum Cryptography&nbsp&nbsp<i class="fa fa-external-link"></i> <BR>
+   Applied Cryptography&nbsp&nbsp<i class="fa fa-external-link"></i> <BR>
    * <BR>
    Cyber Resiliency&nbsp&nbsp<i class="fa fa-external-link"></i><BR>
    * <BR>
