--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@ body {
  <h1 style="color:white; font-size:300%">irsys</h1>
    
  <h5 style="color:white;">*<BR>
-   Applied Cryptography&nbsp&nbsp<i class="fa fa-external-link"></i> <BR>
+   &nbsp&nbsp<i class="fa fa-external-link"></i> <BR>
    * <BR>
-   Cyber Resiliency&nbsp&nbsp<i class="fa fa-external-link"></i><BR>
+   &nbsp&nbsp<i class="fa fa-external-link"></i><BR>
    * <BR>
    Advisory and Training&nbsp&nbsp<i class="fa fa-external-link"></i></h5>
  </div>
