--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ body {
  <BR>
    
  <div class="c" style="text-align:center">
- <h1 style="color:white; font-size:300%">irsys</h1>
+ <h1 style="color:white; font-size:300%">ir.systems</h1>
    
  <h5 style="color:white;">*<BR>
    &nbsp&nbsp<i class="fa fa-external-link"></i> <BR>
